Fixed upload listing page Aligned coloring for profile picture, upload listing

--- a/client/src/Components/MainPage/MainFeed/index.css
+++ b/client/src/Components/MainPage/MainFeed/index.css
@@ -58,16 +58,15 @@
 }
 
 .upload_listing {
-    position: sticky;
+    position: fixed;
     bottom: 0;
-    right: 500px;
-    border: 0px;
+    right: 31px;
     margin-right: 20px;
     margin-bottom: 25px;
     padding: 22.5px;
     border-radius: 50px;
     background-color: #FFE800;
-    border: 1px solid grey;
+    border: 1px solid #FFE800;
     cursor: pointer;
 }
 
